@@ -31,8 +31,9 @@
 #include "CString.h"
 #include "PlatformString.h"
 #include "FontDescription.h"
-#include "cairo-ft.h"
-#include "cairo.h"
+
+#include <cairo-ft.h>
+#include <cairo.h>
 #include <fontconfig/fcfreetype.h>
 
 namespace WebCore {
